--- a/style.css
+++ b/style.css
@@ -3,3 +3,40 @@ body {
   height: 100%;
   margin: 0;
 }
+header {
+  text-align: center;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+h1 {
+  font-size: 2em;
+  color: black
+}
+nav a {
+  padding: 10px 0;
+  background-color: #bbb;
+}
+figcaption {
+  text-align: center;
+  font-style: 8pt;
+}
+#featured-property p {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
+   width: 800px;
+}
+#details {
+  display: block;
+  text-align: center;
+}
+#details div {
+  background-color: red;
+  text-align: center;
+  float: inline-start;
+  width: 25%;
+}
